lib_LTLIBRARIES	= libfreeeos.la

EXTRA_DIST = aux_scale.h \
			 bfgs.h \
			 constants.h \
			 diagnostics.h \
			 eff_fit.h \
			 eos_free_calc_argument.h \
			 excitation_block.h \
			 helium1.h \
			 ionization.h \
			 nuvar.h \
			 pi_fit.h \
			 quad4block.h \
			 statistical_weights.h

libfreeeos_la_SOURCES = aux_to_traditional.f \
						bfgs.f \
						coulomb_adjust.f \
						coulomb.f \
						deriv_product.f \
						deriv_ratio.f \
						effective_radius.f \
						effsum_calc.f \
						eos_bfgs.f \
						eos_calc.f \
						eos_cold_start.f \
						eos_free_calc.f \
						eos_jacobian.f \
						eos_sum_calc.f \
						eos_tqft.f \
						eos_tqsum_calc.f \
						eos_warm_step.f \
						exchange_coeff.f \
						exchange_gcpf.f \
						excitation_pi_end.f \
						excitation_pi.f \
						excitation_sum.f \
						exct_calc.f \
						fermi_dirac_coeff.f \
						fermi_dirac_ct.f \
						fermi_dirac_direct.f \
						fermi_dirac_exchange.f \
						fermi_dirac.f \
						fermi_dirac_minusnr_coeff.f \
						fermi_dirac_original_coeff.f \
						fermi_dirac_recursion.f \
						fjs_pi.f \
						fp12_calc.f \
						f_psi.f \
						free_eos_detailed.f \
						free_eos.f \
						free_eos_interpolated.f \
						free_non_ideal_calc.f \
						ionize.f \
						lnblnk.f \
						lnx_calc.f \
						Makefile.am \
						master_coulomb.f \
						mdh_pi.f \
						molecular_hydrogen.f \
						pl_prepare.f \
						plsum_approx.f \
						plsum.f \
						poly_sum.f \
						pteh_pi.f \
						pteh_theta.f \
						qmhd_calc.f \
						qryd_approx.f \
						qryd_calc.f \
						qstar_calc.f \
						quad4b.f \
						round_ln.f \
						tau_calc.f \
						version.f
