lib_LTLIBRARIES		= libopint.la
libopint_la_SOURCES	= lib/condux_ad.f \
					  lib/dopinit.f \
					  lib/dreadkx.f \
					  lib/ratmat.f \
					  lib/condux_cf.f \
					  lib/dopintc.f \
					  lib/dshep.f \
					  lib/rbival.f \
					  lib/dadjac.f \
					  lib/dopintf.f \
					  lib/duvip3d.f \
					  lib/rbivpd.f \
					  lib/dctang.f \
					  lib/dopints.f \
					  lib/duvip3p.f \
					  lib/rde95.f \
					  lib/dextrp.f \
					  lib/dordgr.f \
					  lib/gi.f \
					  lib/rdi95.f \
					  lib/dhunt.f \
					  lib/dordgri.f \
					  lib/gid.f \
					  lib/readal.f \
					  lib/dintrp.f \
					  lib/dpderix.f \
					  lib/inttwo.f \
					  lib/rtperm.f \
					  lib/dintrpi.f \
					  lib/dpderiy.f \
					  lib/itoh_coeff_cf.f \
					  lib/sbilin.f \
					  lib/dmaceps.f \
					  lib/dpdmin.f \
					  lib/itoh_ec_ad.f \
					  lib/sfa_ad.f \
					  lib/dmasub.f \
					  lib/dpdste.f \
					  lib/itoh_ec_cf.f \
					  lib/sfa_cf.f \
					  lib/dmasube.f \
					  lib/dreade.f \
					  lib/itoh_init_ad.f \
					  lib/trdisa.f \
					  lib/dmasubi.f \
					  lib/dreadi.f \
					  lib/itoh_init_cf.f \
					  lib/trdisb.f \
					  lib/dmaxmn.f \
					  lib/dreadk.f \
					  lib/rat2d.f \
					  lib/dcspline.f 

