lib_LTLIBRARIES		= libopint.la
libopint_la_SOURCES	= condux_ad.f \
					  dopinit.f \
					  dreadkx.f \
					  ratmat.f \
					  condux_cf.f \
					  dopintc.f \
					  dshep.f \
					  rbival.f \
					  dadjac.f \
					  dopintf.f \
					  duvip3d.f \
					  rbivpd.f \
					  dctang.f \
					  dopints.f \
					  duvip3p.f \
					  rde95.f \
					  dextrp.f \
					  dordgr.f \
					  gi.f \
					  rdi95.f \
					  dhunt.f \
					  dordgri.f \
					  gid.f \
					  readal.f \
					  dintrp.f \
					  dpderix.f \
					  inttwo.f \
					  rtperm.f \
					  dintrpi.f \
					  dpderiy.f \
					  itoh_coeff_cf.f \
					  sbilin.f \
					  dmaceps.f \
					  dpdmin.f \
					  itoh_ec_ad.f \
					  sfa_ad.f \
					  dmasub.f \
					  dpdste.f \
					  itoh_ec_cf.f \
					  sfa_cf.f \
					  dmasube.f \
					  dreade.f \
					  itoh_init_ad.f \
					  trdisa.f \
					  dmasubi.f \
					  dreadi.f \
					  itoh_init_cf.f \
					  trdisb.f \
					  dmaxmn.f \
					  dreadk.f \
					  rat2d.f \
					  dcspline.f 


